[package]
name = "r357"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "stream"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.31"
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
bytemuck = "1.25.0"
backoff = { version = "0.4.0", features = ["tokio"] }
warp = { version = "0.4.2", features = ["server"] }
serde = { version = "1.0.228", features = ["derive"] }
