[package]
name = "r357"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
symphonia = { version = "0.5.5", features = ["all", "opt-simd"] }
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
bytemuck = "1.25.0"
tokio-retry2 = { version = "0.9.1", features = ["jitter"] }
warp = { version = "0.4.2", features = ["server"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.36", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-journald = "0.3.2"
tokio-util = "0.7.18"
mdns-sd = "0.17.2"
hostname = "0.4.2"
tracing-log = "0.2.0"
if-addrs = "0.15.0"
